--- a/react-cli/my-app03/src/asset/refClassComp.css
+++ b/react-cli/my-app03/src/asset/refClassComp.css
@@ -1,26 +1,28 @@
 .ref-comp {
-  min-height: 100px !important;
+    min-height: 100px !important;
+    margin-top: 10px;
 }
 
-.class-comp input {
-  width: max-content;
-  min-width: 250px;
-  height: 40px;
-  color: black;
-  padding-left: 10px;
-  border: 1px solid black;
+.class-comp input,
+.func-comp input {
+    width: max-content;
+    min-width: 250px;
+    height: 40px;
+    color: black;
+    padding-left: 10px;
+    border: 1px solid black;
 }
 
-.class-comp > * {
-  margin-top: 20px;
-  margin-left: 10px;
+.class-comp > *,
+.func-comp > * {
+    margin-top: 20px;
+    margin-left: 10px;
 }
-
 
 .success {
-  background-color: lightgreen;
+    background-color: lightgreen;
 }
 
 .fail {
-  background-color: rgb(212, 59, 85);
+    background-color: rgb(212, 59, 85);
 }
